--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "react-scripts": "^5.0.1"
   },
   "scripts": {
-   "predeploy": "npm run build",
-   "deploy": "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "server": "json-server --watch db.json -p 6001",
     "test": "jest --bail",
-    "build":"react-scripts build"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +41,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.6.4",
+    "gh-pages": "^6.2.0",
     "jest": "^27.5.1"
   },
   "jest": {
@@ -48,6 +49,8 @@
       "<rootDir>/jest.setup.js"
     ],
     "testEnvironment": "jsdom",
-    "testPathIgnorePatterns": ["/test_suites"]
+    "testPathIgnorePatterns": [
+      "/test_suites"
+    ]
   }
 }
