--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
     "react-dom": "^17.0.1",
     "react-scripts": "^5.0.1"
   },
-  "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "server": "json-server --watch db.json -p 6001",
-    "test": "jest --bail",
-    "build": "react-scripts build"
+  "scripts": {"predeploy": "npm run build",
+  "deploy": "gh-pages -d build",
+  "start": "react-scripts start",
+  "server": "json-server --watch db.json --port 6001 --cors \"https://berenabiud.github.io/react-hooks-cc-plantshop/\"",
+  "test": "jest --bail",
+  "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
